--- a/src/components/header/dark-mode/dark-mode.module.css
+++ b/src/components/header/dark-mode/dark-mode.module.css
@@ -6,7 +6,7 @@
   align-content: center;
 
   &.active {
-    display: block;
+    display: grid;
   }
 
   > button {
@@ -14,13 +14,8 @@
     border: none;
 
     display: grid;
-    justify-content: center;
 
     > svg {
-      grid-row-start: 1;
-
-      color: var(--color-text);
-
       font-size: var(--fz-500);
       cursor: pointer;
     }
