--- a/src/app/activity/[id]/components/activity-info/activity-info.module.css
+++ b/src/app/activity/[id]/components/activity-info/activity-info.module.css
@@ -55,7 +55,7 @@
     flex-wrap: wrap;
     gap: 1rem;
 
-    margin-block-end: 1.25rem;
+    margin-block-end: 1.5rem;
 
     > li {
       display: flex;
@@ -88,7 +88,7 @@
     display: grid;
     gap: 0.5rem;
 
-    margin-block: 1.75rem 1.5rem;
+    margin-block: 2rem;
 
     color: var(--color-zinc-700);
     font-size: var(--fz-300);
@@ -103,6 +103,8 @@
       .terms {
         padding-inline: 0.25rem;
         color: var(--color-primary);
+
+        cursor: pointer;
       }
     }
   }
