--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -131,6 +131,25 @@
     }
   }
 
+  &.icon {
+    background-color: transparent;
+    color: var(--color);
+
+    padding: 0.5rem;
+
+    &.primary {
+      --color: var(--color-primary);
+    }
+
+    &.muted {
+      --color: var(--color-text-muted);
+    }
+
+    &.destructive {
+      --color: var(--color-destructive);
+    }
+  }
+
   &.sm {
     padding: 0.25rem 0.75rem;
   }
