--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,7 +43,7 @@
   --color-success-darker: hsl(142.1 76.2% 32.3%);
 
   --color-warning: hsl(32.1 90% 64%);
-  --color-warning-opposite: hsl(32.1 90% 14%);
+  --color-warning-opposite: hsl(32.1 90% 98%);
   --color-warning-lighter: hsla(32.1 90% 68%);
   --color-warning-darker: hsl(32.1 90% 62%);
 
@@ -77,6 +77,20 @@
   --animation-duration-fast: 0.1s;
   --animation-duration-normal: 0.2s;
   --animation-duration-slow: 0.6s;
+
+  /* replacing react-toastify colors */
+  --toastify-color-success: var(--color-success);
+  --toastify-color-warning: var(--color-warning);
+  --toastify-color-error: var(--color-destructive);
+
+  --toastify-font-family: Vazirmatn, system-ui;
+
+  --toastify-text-color-light: var(--color-zinc-500);
+  --toastify-text-color-success: var(--color-success-opposite);
+  --toastify-text-color-warning: var(--color-warning-opposite);
+  --toastify-text-color-error: var(--color-destructive-opposite);
+
+  --toastify-color-progress-dark: var(--color-primary-400);
 }
 
 [data-theme="dark"] {
