--- a/src/components/modal-background/modal-background.module.css
+++ b/src/components/modal-background/modal-background.module.css
@@ -3,8 +3,6 @@
   align-items: center;
   justify-content: center;
 
-  background-color: var(--color-surface-modal);
-
   inline-size: 100%;
   block-size: 100vh;
   block-size: 100dvh;
@@ -12,6 +10,15 @@
   position: fixed;
   inset: 0;
   z-index: 999;
+
+  animation-duration: var(--animation-duration-normal);
+  animation-iteration-count: 1;
+  animation-timing-function: ease;
+  animation-delay: 0s;
+  animation-direction: normal;
+  animation-fill-mode: forwards;
+  animation-play-state: running;
+  animation-name: modal-background-fade;
 
   .modal {
     background-color: var(--color-surface);
@@ -22,6 +29,15 @@
     border-radius: var(--border-radius);
 
     box-shadow: var(--shadow-500);
+
+    animation-duration: var(--animation-duration-normal);
+    animation-timing-function: cubic-bezier(0.4, 0, 0, 1.5);
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: forwards;
+    animation-play-state: running;
+    animation-name: modal-transform;
 
     .close {
       > button {
@@ -36,5 +52,23 @@
         }
       }
     }
+  }
+}
+
+@keyframes modal-background-fade {
+  from {
+    background-color: transparent;
+  }
+  to {
+    background-color: var(--color-surface-modal);
+  }
+}
+
+@keyframes modal-transform {
+  from {
+    transform: translate3d(0px, 2rem, 0px);
+  }
+  to {
+    transform: translateZ(0px);
   }
 }
