[REF] change typography [ADD] title for showing section

--- a/src/app/activity/[id]/components/activity-info/activity-info.module.css
+++ b/src/app/activity/[id]/components/activity-info/activity-info.module.css
@@ -10,7 +10,10 @@
     margin-block-end: 1.5rem;
 
     > h1 {
-      font-size: var(--fz-500);
+      color: var(--color-zinc-800);
+
+      font-size: var(--fz-600);
+      font-weight: 600;
     }
 
     .actions {
