--- a/src/app/activity/[id]/page.module.css
+++ b/src/app/activity/[id]/page.module.css
@@ -28,10 +28,24 @@
 
   .showings {
     grid-area: showings;
-    display: grid;
-    gap: 1.5rem;
 
-    margin-block-start: 1rem;
+    margin-block-start: 2rem;
+
+    .showing-header {
+      > h2 {
+        color: var(--color-zinc-700);
+
+        font-size: var(--fz-500);
+        font-weight: 500;
+      }
+    }
+
+    .showing-card {
+      display: grid;
+      gap: 1.5rem;
+
+      margin-block-start: 1rem;
+    }
   }
 }
 
@@ -51,7 +65,9 @@
     }
 
     .showings {
-      grid-template-columns: repeat(2, 1fr);
+      .showing-card {
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
 }
