--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -161,6 +161,17 @@ body {
     padding-inline: var(--full-width-padding-inline);
   }
 
+  .section-heading {
+    margin-block-end: 1rem;
+
+    > h2 {
+      color: var(--color-zinc-700);
+
+      font-size: var(--fz-500);
+      font-weight: 500;
+    }
+  }
+
   .tagline {
     background-color: var(--color-surface-90);
     padding-block: 1rem;
