[ADD] react-konva package [ADD] simple ui seat map with drag and zoom functionalities

--- a/src/app/activity/[id]/components/canvas/canvas.module.css
+++ b/src/app/activity/[id]/components/canvas/canvas.module.css
@@ -1,6 +1,8 @@
-.canvas {
+.stage {
   inline-size: 100%;
   block-size: 100%;
+
+  image-rendering: pixelated;
 
   background-color: var(--color-surface-muted);
 
