[FIX] responsive canvas width and height

--- a/src/app/activity/[id]/components/canvas/canvas.module.css
+++ b/src/app/activity/[id]/components/canvas/canvas.module.css
@@ -2,9 +2,13 @@
   inline-size: 100%;
   block-size: 100%;
 
-  image-rendering: pixelated;
-
   background-color: var(--color-surface-muted);
 
   border-radius: var(--border-radius);
+
+  > * {
+    > canvas {
+      image-rendering: pixelated;
+    }
+  }
 }
