--- a/src/app/activity/[id]/components/seat-map/seat-map.module.css
+++ b/src/app/activity/[id]/components/seat-map/seat-map.module.css
@@ -2,4 +2,13 @@
   grid-area: showings;
 
   margin-block-start: 2rem;
+
+  inline-size: 100%;
+  block-size: 16rem;
+}
+
+@media screen and (min-width: 768px) {
+  .seat-map {
+    block-size: 32rem;
+  }
 }
