--- a/src/app/activity/[id]/components/book-stats/cta-section/cta-section.module.css
+++ b/src/app/activity/[id]/components/book-stats/cta-section/cta-section.module.css
@@ -19,5 +19,9 @@
     justify-content: center;
     align-items: center;
     flex-flow: row-reverse wrap;
+
+    .select {
+      /*inline-size: 12rem;*/
+    }
   }
 }
