--- a/src/app/search/components/result/result.module.css
+++ b/src/app/search/components/result/result.module.css
@@ -1,7 +1,14 @@
 .result {
   grid-area: result;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 768px) {
+  .result {
+    gap: 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
+  }
 }
