--- a/src/components/select/select.module.css
+++ b/src/components/select/select.module.css
@@ -7,7 +7,7 @@
   align-items: center;
   gap: 0.5em;
 
-  padding: 0.5rem;
+  padding: 0.5rem 1rem;
 
   border: 1px solid var(--color-zinc-300);
   border-radius: var(--border-radius);
