[UPDATE] WEST_MALL hall data [FIX] canvas height and seat size to be more responsive [REF] organized code (code splitting)

--- a/src/app/activity/[id]/components/seat-map/seat-map.module.css
+++ b/src/app/activity/[id]/components/seat-map/seat-map.module.css
@@ -1,14 +1,11 @@
+.loading {
+  margin-block: 3rem;
+}
+
 .seat-map {
   margin-block-start: 2rem;
 
   inline-size: 100%;
-  block-size: 16rem;
 
   position: relative;
-}
-
-@media screen and (min-width: 768px) {
-  .seat-map {
-    block-size: 32rem;
-  }
 }
