[ADD] utils component for calculating final price [FIX] link element size

--- a/src/app/activity/[id]/components/book-stats/cta-section/cta-section.module.css
+++ b/src/app/activity/[id]/components/book-stats/cta-section/cta-section.module.css
@@ -19,6 +19,12 @@
 
     .button {
       min-inline-size: 20ch;
+      padding: 0;
+
+      .link {
+        inline-size: 100%;
+        padding: 0.5rem 1rem;
+      }
     }
   }
 }
