[UPDATE] Button component the ghost shape

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -110,6 +110,8 @@
     background-color: transparent;
     color: var(--color);
 
+    padding: 0;
+
     &:hover {
       color: var(--color-hover);
     }
