--- a/src/app/search/components/city-filter/city-filter.module.css
+++ b/src/app/search/components/city-filter/city-filter.module.css
@@ -13,7 +13,7 @@
   .item {
     inline-size: 100%;
     justify-content: start;
-    padding-block: 0.75rem;
+    padding: 0.75rem 0.5rem !important;
 
     &:hover {
       background-color: var(--color-surface-muted);
