--- a/src/app/activity/[id]/modals/price-list-modal/price-list-modal.module.css
+++ b/src/app/activity/[id]/modals/price-list-modal/price-list-modal.module.css
@@ -26,7 +26,7 @@
         block-size: 0.5rem;
 
         border-radius: 50%;
-        border: 2px solid var(--color-zinc-400);
+        border: 2px solid var(--color-primary);
       }
     }
   }
