--- a/src/components/activity-card/activity-card.module.css
+++ b/src/components/activity-card/activity-card.module.css
@@ -18,6 +18,7 @@
     overflow: hidden;
 
     > img {
+      aspect-ratio: 2/1.5;
       grid-column: 1;
       grid-row: 1;
 
@@ -25,6 +26,30 @@
       inline-size: 100%;
 
       object-fit: cover;
+
+      &.dark {
+        filter: brightness(60%);
+      }
+    }
+
+    .sold-out {
+      grid-column: 1;
+      grid-row: 1;
+
+      justify-self: center;
+      align-self: center;
+
+      inline-size: 80%;
+      block-size: 80%;
+
+      z-index: 1;
+
+      > img {
+        object-fit: contain;
+
+        inline-size: 100%;
+        block-size: 100%;
+      }
     }
 
     .badge {
