--- a/src/app/error.module.css
+++ b/src/app/error.module.css
@@ -7,7 +7,8 @@
 
   justify-items: center;
 
-  min-block-size: 100%;
+  min-block-size: 100vh;
+  min-block-size: 100dvh;
 
   .writings {
     grid-area: writings;
